--- a/.ci/jenkins/Jenkinsfile
+++ b/.ci/jenkins/Jenkinsfile
@@ -41,8 +41,8 @@ private Closure runTests(String nodeName) {
                         }
                     }
                     else if (nodeName=='Windows') {
-                        withEnv(['PY36=Python36', 'PY38=Python38-64', 'CMAKE_GENERATOR=Visual Studio 15 2017 Win64']) {
-                            def pythonLocation = "C:/%PY36%/python.exe"
+                        withEnv(['CMAKE_GENERATOR=Visual Studio 15 2017 Win64']) {
+                            def pythonLocation = "C:/Python36/python.exe"
                             def launchCommand = "${pythonLocation} .ci/last_conan_version.py && ${pythonLocation} -m tox --verbose"
                             bat(script: launchCommand)
                         }
