Migrate ci to Jenkins (#83)
* add jenkinsfile

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* just testing

* wip

* wip

* testing things

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* remove file

* add nodes

* wip

* wip

* wip

* remove old ci

* update badge

* minor changes

* build missing

* check output

* wip

* wip

* update readme

* do not print commands

* revert changes

* skip tests

* wip

* wip

* wip

* wip

* wip

* wip

* revert changes

* print commands

* remove build missing

* add build missing

* wip

* minor changes

* minor changes

* add verbose

* Update .ci/jenkins/Jenkinsfile

Co-authored-by: Javier G. Sogo <jgsogo@gmail.com>

* Update .ci/jenkins/Jenkinsfile

Co-authored-by: Javier G. Sogo <jgsogo@gmail.com>

Co-authored-by: Javier G. Sogo <jgsogo@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,13 @@
 [tox]
 skipsdist=True
 envlist =
-    py{27,37,38}-conan{dev,current,prev,prevprev}
+    py{36}-conan{dev,current,prev}
 
 [testenv]
 deps =
-    conandev: https://github.com/conan-io/conan/archive/develop.tar.gz
+    conandev: git+https://github.com/conan-io/conan.git@develop
     conancurrent: conan
     conanprev: conan-unknown
-    conanprevprev: conan-unknown
     coverage: coverage-enable-subprocess
     tabulate
 
