--- a/features/editable/cmake/hello/CMakeLists.txt
+++ b/features/editable/cmake/hello/CMakeLists.txt
@@ -4,5 +4,5 @@ project(Hello)
 
 find_package(say REQUIRED)
 
-add_executable(hello hello.cpp)
+add_executable(hello src/hello.cpp)
 target_link_libraries(hello say::say)
