--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ deps =
     conanprev: conan-unknown
     coverage: coverage-enable-subprocess
     tabulate
+    packaging
 
 setenv =
     PYTHONDONTWRITEBYTECODE=1
