--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ deps =
     coverage: coverage-enable-subprocess
     tabulate
     packaging
+    colorama
 
 setenv =
     PYTHONDONTWRITEBYTECODE=1
