--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ envlist =
 [testenv]
 deps =
     conancurrent: conan
+    conandev: git+https://github.com/conan-io/conan.git@develop
+    conanprev: conan>=1.40,<1.41
     coverage: coverage-enable-subprocess
     tabulate
     packaging
