--- a/.ci/jenkins/Jenkinsfile
+++ b/.ci/jenkins/Jenkinsfile
@@ -12,9 +12,6 @@ private Closure runTests(String nodeName) {
             stage("${nodeName}") {
                 try {
                     checkout scm
-                    def current_branch = env.BRANCH_NAME
-                    echo "Current branch is: '${current_branch}'"
-                    test_prev_dev_command = ""
                     if (nodeName == 'Linux') {
                         def dockerImage = 'conanio/ci-functional'
                         docker.image(dockerImage).inside('--entrypoint=') {
@@ -22,15 +19,12 @@ private Closure runTests(String nodeName) {
                             def pyenvdir = "${sourcedir}.pyenv"
                             sh(script: "cp -R ./ ${sourcedir}")
                             sh(script: "chown -R conan ${sourcedir}")
-                            if (current_branch=="master") {
-                                test_prev_dev_command = "python .ci/add_prev_and_dev_to_tox.py && "
-                            }
                             def command = "su - conan -c \"" \
                                         + "export PYENV_ROOT=${pyenvdir} && " \
                                         + "export PATH=\"${pyenvdir}/bin:\$PATH\" && " \
                                         + "pyenv local \$PY36 \$PY38 \$PY39 && " \
                                         + "python -m pip install tox tox-venv requests && " \
-                                        + test_prev_dev_command \
+                                        + "python .ci/add_prev_and_dev_to_tox.py && " \
                                         + "python -m tox --verbose\""
                             sh(script: command)
                         }
@@ -41,21 +35,16 @@ private Closure runTests(String nodeName) {
                                 "PYENV_ROOT=${localDir}/.pyenv", 
                                 "PATH+EXTRA=${localDir}/.pyenv/shims:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"]) {
                                 def pythonLocation = "${localDir}/.pyenv/versions/\$PY36/bin/python"
-                                if (current_branch=="master") {
-                                    test_prev_dev_command = "${pythonLocation} .ci/add_prev_and_dev_to_tox.py && "
-                                }
                                 def launchCommand = "pyenv local \$PY36 \$PY38 \$PY39 && " \
-                                                  + test_prev_dev_command + "${pythonLocation} -m tox --verbose"
+                                                  + "${pythonLocation} .ci/add_prev_and_dev_to_tox.py && " 
+                                                  + "${pythonLocation} -m tox --verbose"
                                 sh(script: launchCommand)
                         }
                     }
                     else if (nodeName=='Windows') {
                         withEnv(['CMAKE_GENERATOR=Visual Studio 15 2017 Win64']) {
                             def pythonLocation = "C:/Python36/python.exe"
-                            if (current_branch=="master") {
-                                test_prev_dev_command = "${pythonLocation} .ci/add_prev_and_dev_to_tox.py && "
-                            }
-                            def launchCommand = test_prev_dev_command + "tox -vv"
+                            def launchCommand = "${pythonLocation} .ci/add_prev_and_dev_to_tox.py && tox -vv"
                             bat(script: launchCommand)
                         }
                     }
