--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,9 @@ envlist =
 
 [testenv]
 deps =
-    conancurrent: conan
     conandev: git+https://github.com/conan-io/conan.git@develop
-    conanprev: conan>=1.40,<1.41
+    conancurrent: conan
+    conanprev: conan-unknown
     coverage: coverage-enable-subprocess
     tabulate
     packaging
