--- a/.ci/jenkins/Jenkinsfile
+++ b/.ci/jenkins/Jenkinsfile
@@ -35,9 +35,7 @@ private Closure runTests(String nodeName) {
                                 "PYENV_ROOT=${localDir}/.pyenv", 
                                 "PATH+EXTRA=${localDir}/.pyenv/shims:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"]) {
                                 def pythonLocation = "${localDir}/.pyenv/versions/\$PY36/bin/python"
-                                def launchCommand = "pyenv local \$PY36 \$PY38 \$PY39 && " \
-                                                  + "${pythonLocation} .ci/last_conan_version.py && " 
-                                                  + "${pythonLocation} -m tox --verbose"
+                                def launchCommand = "pyenv local \$PY36 \$PY38 \$PY39 && ${pythonLocation} .ci/last_conan_version.py && ${pythonLocation} -m tox --verbose"
                                 sh(script: launchCommand)
                         }
                     }
