--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,8 @@ deps =
     conanprev: conan-unknown
     coverage: coverage-enable-subprocess
     tabulate
+    packaging
+    colorama
 
 setenv =
     PYTHONDONTWRITEBYTECODE=1
