--- a/.ci/jenkins/Jenkinsfile
+++ b/.ci/jenkins/Jenkinsfile
@@ -41,7 +41,7 @@ private Closure runTests(String nodeName) {
                         }
                     }
                     else if (nodeName=='Windows') {
-                        withEnv(['CMAKE_GENERATOR=Visual Studio 16 2019']) {
+                        withEnv(['CMAKE_GENERATOR=Visual Studio 15 2017 Win64']) {
                             def pythonLocation = "C:/Python36/python.exe"
                             def launchCommand = "${pythonLocation} .ci/last_conan_version.py && tox -vv"
                             bat(script: launchCommand)
