Update examples CI (#96)
* add deps

* update tox call

* update examples

* remove emscripten

* install settings.yml

* Update .gitignore

* update generator

* wip

* wip

--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,13 @@ envlist =
 
 [testenv]
 deps =
-    conandev: git+https://github.com/conan-io/conan.git@develop
     conancurrent: conan
+    conandev: git+https://github.com/conan-io/conan.git@develop
     conanprev: conan-unknown
     coverage: coverage-enable-subprocess
     tabulate
+    packaging
+    colorama
 
 setenv =
     PYTHONDONTWRITEBYTECODE=1
