New example: features/visual_studio/chat

--- a/features/visual_studio/chat/test_package/CMakeLists.txt
+++ b/features/visual_studio/chat/test_package/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(PackageTest CXX)
 cmake_minimum_required(VERSION 3.0)
 
-find_package(Hello REQUIRED)
+find_package(Chat REQUIRED)
 
 add_executable(example example.cpp)
-target_link_libraries(example Hello::Hello)
+target_link_libraries(example Chat::Chat)
