Simplify the CI scripts

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,11 @@
 [tox]
 skipsdist=True
 envlist =
-    py{36}-conan{dev,current,prev}
+    py36
 
 [testenv]
 deps =
-    conancurrent: conan
-    conandev: git+https://github.com/conan-io/conan.git@develop
-    conanprev: conan-unknown
+    conan==2.0.0a1
     coverage: coverage-enable-subprocess
     tabulate
     packaging
