Hello would not compile, fix layout() of say (#102)
* Hello would not compile, fix layout() of say

Includes are assumed to be in "include" for the cmake_layout(self)
system, but say's includes are in the src folder.

* fix py version

* remove verbose

* simplify

* wip

* update gitignore

* fix example

Co-authored-by: czoido <mrgalleta@gmail.com>

--- a/features/editable/cmake/say/CMakeLists.txt
+++ b/features/editable/cmake/say/CMakeLists.txt
@@ -2,11 +2,7 @@ cmake_minimum_required(VERSION 3.15)
 project(say CXX)
 
 add_library(say src/say.cpp)
+target_include_directories(say PUBLIC include)
 
-set_target_properties(say PROPERTIES PUBLIC_HEADER "src/say.h")
-install(TARGETS say DESTINATION "."
-        PUBLIC_HEADER DESTINATION include
-        RUNTIME DESTINATION bin
-        ARCHIVE DESTINATION lib
-        LIBRARY DESTINATION lib
-        )
+set_target_properties(say PROPERTIES PUBLIC_HEADER "include/say.h")
+install(TARGETS say)
