--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
 skipsdist=True
 envlist =
-    py{36}-conan{current}
+    py{36}-conan{dev,current}
 
 [testenv]
 deps =
     conancurrent: conan
+    conandev: git+https://github.com/conan-io/conan.git@develop
     coverage: coverage-enable-subprocess
     tabulate
     packaging
