--- a/.ci/jenkins/Jenkinsfile
+++ b/.ci/jenkins/Jenkinsfile
@@ -24,7 +24,7 @@ private Closure runTests(String nodeName) {
                             def command = "su - conan -c \"" \
                                         + "export PYENV_ROOT=${pyenvdir} && " \
                                         + "export PATH=\"${pyenvdir}/bin:\$PATH\" && " \
-                                        + "pyenv local \$PY36 \$PY38 \$PY39 && " \
+                                        + "pyenv local \$PY38 \$PY39 && " \
                                         + "python -m pip install tox tox-venv requests && " \
                                         + "python -m tox --verbose\""
                             sh(script: command)
@@ -32,18 +32,18 @@ private Closure runTests(String nodeName) {
                     }
                     else if (nodeName=='Macos') {
                         def localDir = '/Users/jenkins'
-                        withEnv(['PY36=3.6.13', 'PY38=3.8.6', 'PY39=3.9.0',
+                        withEnv(['PY38=3.8.6', 'PY39=3.9.0',
                                 "PYENV_ROOT=${localDir}/.pyenv", 
                                 "PATH+EXTRA=${localDir}/.pyenv/shims:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"]) {
-                                def pythonLocation = "${localDir}/.pyenv/versions/\$PY36/bin/python"
-                                def launchCommand = "pyenv local \$PY36 \$PY38 \$PY39 && " \
+                                def pythonLocation = "${localDir}/.pyenv/versions/\$PY38/bin/python"
+                                def launchCommand = "pyenv local \$PY38 \$PY39 && " \
                                                   + "${pythonLocation} -m tox"
                                 sh(script: launchCommand)
                         }
                     }
                     else if (nodeName=='Windows') {
                         withEnv(['CMAKE_GENERATOR=Visual Studio 15 2017', 'CMAKE_GENERATOR_PLATFORM=x64']) {
-                            def pythonLocation = "C:/Python36/python.exe"
+                            def pythonLocation = "C:/Python38-64/python.exe"
                             def launchCommand = "tox -vv"
                             bat(script: launchCommand)
                         }
