Use py 3.8 and fix editables (#108)
* fix editables

* use py 3.8

* fix tox

* wip

* raise version

* check remotes

* Fixed example

* minor changes

Co-authored-by: memsharded <james@conan.io>
Co-authored-by: Luis <lasote@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skipsdist=True
 envlist =
-    py{36}-conan{dev,current}
+    py{38}-conan{dev,current}
 
 [testenv]
 deps =
@@ -11,6 +11,7 @@ deps =
     tabulate
     packaging
     colorama
+    protobuf
 
 setenv =
     PYTHONDONTWRITEBYTECODE=1
