--- a/libraries/protobuf/serialization/CMakeLists.txt
+++ b/libraries/protobuf/serialization/CMakeLists.txt
@@ -1,19 +1,16 @@
-cmake_minimum_required(VERSION 3.1.2)
+cmake_minimum_required(VERSION 3.15)
 project(sensor CXX)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup(TARGETS)
-
-find_package(Protobuf REQUIRED)
+find_package(Protobuf REQUIRED CONFIG)
 
 protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS sensor.proto)
 protobuf_generate_python(PROTO_PYS sensor.proto)
 
 add_executable(${PROJECT_NAME} main.cc ${PROTO_SRCS} ${PROTO_HDRS})
-target_link_libraries(${PROJECT_NAME} PUBLIC CONAN_PKG::protobuf)
+target_link_libraries(${PROJECT_NAME} PRIVATE protobuf::protobuf)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_BINARY_DIR})
-set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 11)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_14)
 
 add_custom_target(proto_python ALL DEPENDS ${PROTO_PYS})
