run in conan 1.X

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
 skipsdist=True
 envlist =
-    py{38}-conan{dev,current}
+    py{38}-conancurrent
 
 [testenv]
 deps =
-    conancurrent: conan
-    conandev: git+https://github.com/conan-io/conan.git@develop
+    conancurrent: conan<2
     coverage: coverage-enable-subprocess
     tabulate
     packaging
